try fix horizontal scroll bug

--- a/css/reset.css
+++ b/css/reset.css
@@ -10,6 +10,7 @@
 html,
 body {
 	min-height: 100%;
+	overflow-x: hidden;
 }
 html {
 	font-size: 62.5%;
